src/test/deca/context/valid/test_class/unit_class_with_null.deca
// Description:
//    Unit Test null
// Results:
//    true
//
// History:
//    Created on 16/01/2025


class A { }

{
    A a = null;
}
